# demons

./: CMakeLists.txt  Colisions.h  DynamicObject.h  README.md  Util.h  main.cpp  resources.qrc
.github/workflows/: ci.yml
Animation/: animation.cpp  animation.h  hero_animation.cpp  hero_animation.h  wings.cpp  wings.h
App/: app.cpp  app.h
Classes/: Boss.h  Constants.h  Creature.h  Model.h  Points.h  StaticObject.h
Controller/: AbstractController.h  Controller.h  LevelController.cpp  LevelController.h  abstract_controller.cpp  abstract_controller.h  collisions_controller.cpp  collisions_controller.h  controller.cpp  controller.h  level_controller.cpp  level_controller.h  npc_controller.cpp  npc_controller.h  win_controller.cpp  win_controller.h  сontroller.cpp  сontroller.h
GameObject/: Boiler.cpp  Boiler.h  Boss.h  Creature.h  GameObject.h  Hero.h  NPC.h  Spawner.h  Wall.h  boiler.cpp  boiler.h  boss.cpp  boss.h  creature.cpp  creature.h  dynamic_object.cpp  dynamic_object.h  fireball.cpp  fireball.h  game_object.cpp  game_object.h  hero.cpp  hero.h  hit_box.cpp  hit_box.h  npc.cpp  npc.h  spawner.h  static_object.cpp  static_object.h  wall.h  сreature.cpp  сreature.h
Map/: Map.h  map.cpp  map.h
Model/: constants.h  model.cpp  model.h
Resources/Jsons/: boilers_data.json
Util/: Colisions.cpp  Points.cpp  collisions.cpp  collisions.h  hit_box.cpp  hit_box.h  point.cpp  point.h  points.cpp  points.h  structs.h  util.h  vector.cpp  vector.h
View/: View.h  end_menu.cpp  end_menu.h  menu.cpp  menu.h  view.cpp  view.h
